--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "Suppress developer warnings")
 
 enable_testing()
-# Find libtorch
+# Find libtorch.  Modify this line to find your own libtorch installation.
+set(Torch_DIR "/home/panos/Applications/libtorch/share/cmake/Torch")
+
 find_package(Torch REQUIRED)
 
 # Add pthread
