--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -5,9 +5,11 @@ find_package(Torch REQUIRED)
 # Specify the executable
 set(SOURCE_FILE1 tensordual_test.cpp)
 set(SOURCE_FILE2 tensordualcuda_test.cu)
+set(SOURCE_FILE3 tensordualcuda_sparse_test.cu)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 add_executable(dualtest ${SOURCE_FILE1})
 add_executable(dualtest_cuda ${SOURCE_FILE2})
+add_executable(dualtest_cuda_sparse ${SOURCE_FILE3})
 
 # Include GTest
 find_package(GTest REQUIRED)
@@ -44,6 +46,12 @@ target_include_directories(dualtest_cuda
         ${CMAKE_SOURCE_DIR}/src/cpp
 )
 
+target_include_directories(dualtest_cuda_sparse
+    PRIVATE
+        ${TORCH_INCLUDE_DIRS}
+        ${CMAKE_SOURCE_DIR}/src/cpp
+)
+
 # Link TACO, GTest, and libtorch
 # Specify the Taco library
 set(TACO_LIB ${CMAKE_BINARY_DIR}/lib/libtaco.so)
@@ -62,6 +70,12 @@ target_link_libraries(dualtest_cuda
         ${GTEST_LIBRARIES}
 )
 
+target_link_libraries(dualtest_cuda_sparse
+    PRIVATE
+        ${TORCH_LIBRARIES}
+        ${GTEST_LIBRARIES}
+)
+
 # Set C++ standard for the target
 set_property(TARGET dualtest PROPERTY CXX_STANDARD 17)
 set_property(TARGET dualtest_cuda PROPERTY CXX_STANDARD 17)
@@ -69,4 +83,5 @@ set_property(TARGET dualtest_cuda PROPERTY CXX_STANDARD 17)
 # Add the test executable to CTest
 add_test(NAME DualTest COMMAND dualtest)
 add_test(NAME DualTestCuda COMMAND dualtest_cuda)
+add_test(NAME DualTestCudaSparse COMMAND dualtest_cuda_sparse)
 
